--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="black-translucent"
     />
 
-    <title>Noodl Viewer</title>
+    <title>EmpowerED</title>
 
 
     <style>
@@ -59,7 +59,7 @@
     <script src="/react-dom.production.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
-    <script src="/index-36b86d29626e5b3d.js"></script>
+    <script src="/index-badc318bd7108559.js"></script>
 <script>
 (function () {
   Noodl.Env['BaseUrl'] = '/';
